fix: alignment issue at cta button

--- a/assets/styles/partials/_components.scss
+++ b/assets/styles/partials/_components.scss
@@ -223,7 +223,7 @@ legend {
     }
   }
 
-  button {
+  > button {
     margin-top: 1rem;
   }
 }
